--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "homepage": "https://aaivey22.github.io/react-portfolio2.2",
-  "main": "index.js",
+  "name": "react-portfolio2.2",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
@@ -22,14 +21,10 @@
     "react-typed": "^1.2.0"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/aaivey22/aaivey22.github/react-portfolio2.2"
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
